<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.boss.scanner_esp8266.MainActivity"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/deviceInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name">

        <TableRow>

            <TextView
                android:id="@+id/deviceMacAddressLabel"
                style="@style/DeviceInfoItem"
                android:layout_height="match_parent"
                android:text="@string/macAddress"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/deviceMacAddress"
                style="@style/DeviceInfoItem"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/icsblue"
                android:textIsSelectable="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/deviceMacVendorLabel"
                style="@style/DeviceInfoItem"
                android:layout_height="match_parent"
                android:text="@string/macVendor"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/deviceMacVendor"
                style="@style/DeviceInfoItem"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/icsblue"
                android:textIsSelectable="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/internalIpAddressLabel"
                style="@style/DeviceInfoItem"
                android:layout_height="match_parent"
                android:text="@string/internalIpLabel"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/internalIpAddress"
                style="@style/DeviceInfoItem"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/icsblue"
                android:textIsSelectable="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/externalIpAddressLabel"
                style="@style/DeviceInfoItem"
                android:layout_height="match_parent"
                android:text="@string/externalIpLabel"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/externalIpAddress"
                style="@style/DeviceInfoItem"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/fetching"
                android:textColor="@color/icsblue"
                android:textIsSelectable="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/signalStrengthLabel"
                style="@style/DeviceInfoItem"
                android:layout_height="match_parent"
                android:text="@string/signalLabel"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/signalStrength"
                style="@style/DeviceInfoItem"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/icsblue"
                android:textIsSelectable="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/ssidLabel"
                style="@style/DeviceInfoItem"
                android:layout_height="match_parent"
                android:text="@string/ssid"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/ssid"
                style="@style/DeviceInfoItem"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/icsblue"
                android:textIsSelectable="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/bssidLabel"
                style="@style/DeviceInfoItem"
                android:layout_height="match_parent"
                android:text="@string/bssid"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/bssid"
                style="@style/DeviceInfoItem"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/icsblue"
                android:textIsSelectable="true" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click"
        android:text="Button" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/logView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="8dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
